[package]
build = "build.rs"
name = "libssh-sys"
version = "0.1.0"
authors = ["Zach Blankenship <zach.blankenship@gmail.com>"]

[lib]
name = "libssh_sys"
path = "lib.rs"

[dependencies]
libz-sys = ">= 0"
libc = "0.2"

[target."cfg(unix)".dependencies]
openssl-sys = "0.9"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1.2"
